--- a/src/globals.css
+++ b/src/globals.css
@@ -102,7 +102,7 @@
     @apply flex justify-center items-center;
   }
 
-  .flex-between {
+  .ween {
     @apply flex justify-between items-center;
   }
 
@@ -209,7 +209,7 @@
 
   /* Bottom bar */
   .bottom-bar {
-    @apply z-50 flex-between w-full sticky bottom-0 rounded-t-[20px] bg-dark-2 px-5 py-4 md:hidden;
+    @apply z-50 flex justify-between w-full sticky bottom-0 rounded-t-[20px] bg-dark-2 px-5 py-4 md:hidden;
   }
 
   /* File uploader */
