--- a/src/globals.css
+++ b/src/globals.css
@@ -146,6 +146,9 @@
   .explore-container {
     @apply flex flex-col flex-1 items-center overflow-scroll py-10 px-5 md:p-14 custom-scrollbar;
   }
+  .save-container {
+    @apply flex flex-col flex-1 overflow-scroll py-10 px-5 md:p-14 custom-scrollbar;
+  }
 
   .explore-inner_container {
     @apply max-w-5xl flex flex-col items-center w-full gap-6 md:gap-9;
